feat: preparacion para subir archivos pdf
Adicionalmente se agregó ollama v3 para usar como modelo de ia a los requerimientos (txt)

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ tiktoken          # Para contar tokens (necesario para OpenAI)
 # Variables de entorno
 pydantic-settings
 python-dotenv
+
+#Adicionales
+langchain-ollama
